--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
+    line-height: 1.5;
     color: #333;
     background: #a1c3ff;
 }
@@ -48,6 +49,10 @@ ul {
     font-weight: bold;
 }
 
+.navbar a:hover {
+    color: lightblue;
+}
+
 .navbar .container {
     display: flex;
     justify-content: space-between;
@@ -61,4 +66,59 @@ ul {
 
 .navbar ul li {
     margin-left: 20px;
+}
+
+.header {
+    background-color: #0151cc;
+    color: #fff;
+    min-height: 400px;
+}
+
+.header h1 {
+    font-size: 3rem;
+    font-weight: bold;
+    line-height: 1.2;
+}
+
+.header img {
+    max-width: 400px;
+    padding-top: 60px;
+}
+
+.header .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.boxes .container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.box {
+    flex: 1;
+    background: #0a51cc;
+    color: #fff;
+    border-radius: 10px;
+    margin: 20px 10px;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.6);
+    padding: 15px 20px;
+}
+
+@media(max-width: 768px) {
+    .header .container {
+        flex-direction: column;
+        padding-top: 20px;
+        text-align: center;
+    }
+
+    .boxes .container {
+        display: block;
+        text-align: center;
+    }
+
+    .header img {
+        padding-bottom: 30px;
+    }
 }
